<resources>

    <string name="app_name">监控</string>
    <string name="menu_settings">设置</string>
    <string name="title_activity_main">监控</string>
    <string name="mb">MB</string>
    <string name="start">启动</string>
    <string name="end">停止</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="length">1024</string>
    <string name="device1">设备1</string>
    <string name="device2">设备2</string>
</resources>